--- a/test_doc/w.html
+++ b/test_doc/w.html
@@ -1,4 +1,5 @@
 <html><h1>Testable documentation</h1>
+<p><a href="http://htmlpreview.github.io/?https://github.com/wware/python-hacks/blob/master/test_doc/w.html">Fully rendered</a></p>
 <p>I saw somebody give a presentation on documentation that could be included
 in automatic tests. That is to say, the usage examples provided in the docs
 could be automatically checked to make sure they still work with the current
